Compressed background video. Corrected preloader with DXP gif. Added in SwiperJS. Aligned controls for SwiperJS. Added HR line.

--- a/assets/css/loader.css
+++ b/assets/css/loader.css
@@ -1,14 +1,20 @@
 
 #preloader {
-z-index: -1;
-background: rgb(21,40,55);
-background: radial-gradient(circle, rgba(21,40,55,1) 0%, rgba(13,21,28,1) 100%);
-position: fixed;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
+    z-index: -1;
+    background: rgb(39,38,36);
+    background: radial-gradient(circle, rgba(39,38,36,1) 0%, rgba(0,0,0,1) 100%);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 200%;
 }
+
+#loader {
+    top: 50%;
+    transform: translateY(110%);
+}
+/* }
 #loader {
 display: block;
 position: relative;
@@ -72,4 +78,4 @@ animation: spin 1.5s linear infinite;
     -ms-transform: rotate(360deg);
     transform: rotate(360deg);
 }
-}
+} */
